<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#030014">

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/nametextView"
        android:textColor="#ffffff"
        android:textSize="@dimen/abc_dialog_padding_material"
        android:layout_below="@+id/button_hold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:id="@+id/textView_priceText"
        android:textColor="#eac281"
        android:textSize="45sp"
        android:textAlignment="center"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/buyNumTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyNum"
        android:id="@+id/buyNumTextView"
        android:textColor="#ffffff"
        android:layout_below="@+id/nametextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allsell"
        android:id="@+id/button_allSell"
        android:textColor="#000000"
        android:background="@drawable/jinse"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/buyNumTextView"
        android:layout_marginBottom="71dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyMorePrice"
        android:id="@+id/textView2"
        android:layout_marginLeft="23dp"
        android:layout_toEndOf="@+id/setBtn"
        android:layout_above="@+id/textView32" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyLessPrice"
        android:id="@+id/textView3"
        android:layout_marginLeft="23dp"
        android:layout_alignEnd="@+id/usrBtn"
        android:layout_above="@+id/textView32" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView_priceText"
        android:layout_centerHorizontal="true"
        android:textColor="#030014"
        android:backgroundTint="#030014" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="看多/空"
        android:id="@+id/textView5"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="18dp"
        android:layout_above="@+id/textView7"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:id="@+id/shoushutextView"
        android:textColor="#eac281"
        android:layout_alignTop="@+id/buyNumTextView"
        android:layout_toRightOf="@+id/buyNumTextView"
        android:layout_toEndOf="@+id/buyNumTextView"
        android:textSize="20sp" />

    <Button
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="@string/chicang"
        android:id="@+id/button_hold"
        android:layout_alignTop="@+id/usrBtn"
        android:layout_alignRight="@+id/nametextView"
        android:layout_alignEnd="@+id/nametextView"
        android:background="@drawable/jinse" />

    <ImageButton
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/setBtn"
        android:background="@mipmap/setting"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <ImageButton
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/usrBtn"
        android:background="@mipmap/user"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/button_buyLess"
        android:layout_marginEnd="20dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="@string/buy"
        android:id="@+id/button"
        android:background="@drawable/huise"
        android:layout_alignTop="@+id/button_hold"
        android:layout_alignLeft="@+id/nametextView"
        android:layout_alignStart="@+id/nametextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buymore"
        android:id="@+id/button_buyMore"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="@drawable/buymore"
        android:layout_alignTop="@+id/button_allSell"
        android:layout_alignStart="@+id/textView5"
        android:layout_toStartOf="@+id/nametextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyless"
        android:id="@+id/button_buyLess"
        android:background="@drawable/shape"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_alignTop="@+id/button_allSell"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_toEndOf="@+id/button_hold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:id="@+id/textView32"
        android:layout_above="@+id/button_allSell"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/netImgBtn"
        android:background="#e0000000"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/jinse"
        android:layout_below="@+id/textView4"
        android:id="@+id/linearLayout2"
        android:layout_alignStart="@+id/button_buyMore"
        android:layout_marginRight="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yingkui"
                android:id="@+id/textView8"
                android:textColor="#030014"
                android:textSize="30sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/_1234567890"
                android:id="@+id/textView10"
                android:textColor="#030014"
                android:textSize="30sp"
                android:layout_gravity="right"
                android:layout_toStartOf="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_alignTop="@+id/textView8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/$"
                android:id="@+id/textView9"
                android:textSize="20sp"
                android:textColor="#474748"
                android:layout_marginRight="10dp"
                android:layout_alignBottom="@+id/textView8"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/jinse"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/netImgBtn"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView34"
                android:textColor="#030014"
                android:textSize="30sp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="19dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/_11111"
                android:id="@+id/textView6"
                android:textColor="#030014"
                android:textSize="30sp"
                android:layout_alignBottom="@+id/textView7"
                android:layout_toStartOf="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shou"
                android:id="@+id/textView7"
                android:textSize="20sp"
                android:textColor="#494848"
                android:layout_alignBottom="@+id/textView34"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="19dp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>