<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.secretwang.myapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#030014">

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/nametextView"
        android:textColor="#ffffff"
        android:textSize="@dimen/abc_dialog_padding_material"
        android:layout_below="@+id/button_hold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:id="@+id/textView_priceText"
        android:textColor="#eac281"
        android:textSize="45dp"
        android:textAlignment="center"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/buyNumTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyNum"
        android:id="@+id/buyNumTextView"
        android:textColor="#ffffff"
        android:layout_below="@+id/nametextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allsell"
        android:id="@+id/button_allSell"
        android:textColor="#000000"
        android:background="@drawable/shape"
        android:backgroundTint="#eac281"
        android:textSize="20sp"
        android:layout_above="@+id/textView5"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyMorePrice"
        android:id="@+id/textView2"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyLessPrice"
        android:id="@+id/textView3"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView_priceText"
        android:layout_centerHorizontal="true"
        android:textColor="#030014"
        android:backgroundTint="#030014" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="看多/空"
        android:id="@+id/textView5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:textColor="#030014" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:id="@+id/shoushutextView"
        android:textColor="#eac281"
        android:layout_alignTop="@+id/buyNumTextView"
        android:layout_toRightOf="@+id/buyNumTextView"
        android:layout_toEndOf="@+id/buyNumTextView"
        android:textSize="20dp" />

    <Button
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="持仓"
        android:id="@+id/button_hold"
        android:backgroundTint="#eac281"
        android:layout_alignTop="@+id/usrBtn"
        android:layout_alignRight="@+id/nametextView"
        android:layout_alignEnd="@+id/nametextView" />
    
    <ImageButton
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/setBtn"
        android:background="@mipmap/setting"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:id="@+id/usrBtn"
        android:background="@mipmap/user"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/netImgBtn"
        android:layout_alignEnd="@+id/netImgBtn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="买入"
        android:id="@+id/button"
        android:backgroundTint="#c1bfbf"
        android:layout_alignTop="@+id/button_hold"
        android:layout_alignLeft="@+id/nametextView"
        android:layout_alignStart="@+id/nametextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buymore"
        android:id="@+id/button_buyMore"
        android:layout_above="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/shape"
        android:backgroundTint="#ff4320"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_toLeftOf="@+id/nametextView"
        android:layout_toStartOf="@+id/nametextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyless"
        android:id="@+id/button_buyLess"
        android:background="@drawable/shape"
        android:textColor="#ffffff"
        android:backgroundTint="#0069d5"
        android:textSize="20dp"
        android:layout_alignTop="@+id/button_allSell"
        android:layout_alignRight="@+id/netImgBtn"
        android:layout_alignEnd="@+id/netImgBtn"
        android:layout_toRightOf="@+id/button_hold"
        android:layout_toEndOf="@+id/button_hold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:id="@+id/textView32"
        android:layout_above="@+id/button_allSell"
        android:layout_centerHorizontal="true" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/horizontalScrollView"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/netImgBtn"
        android:background="@drawable/shape"
        android:layout_alignEnd="@+id/netImgBtn"
        android:backgroundTint="#eac281">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  盈亏"
            android:id="@+id/textView8"
            android:textColor="#030014"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#eac281" />
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1234567890"
        android:id="@+id/textView10"
        android:textColor="#030014"
        android:layout_marginTop="15dp"
        android:textSize="25dp"
        android:layout_alignTop="@+id/horizontalScrollView"
        android:layout_toLeftOf="@+id/textView9"
        android:layout_toStartOf="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:id="@+id/textView9"
        android:textSize="20dp"
        android:textColor="#474748"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/usrBtn"
        android:layout_alignStart="@+id/usrBtn" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/horizontalScrollView2"
        android:background="@drawable/shape"
        android:backgroundTint="#eac281"
        android:layout_below="@+id/netImgBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  看多"
            android:id="@+id/textView34"
            android:textColor="#030014"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#eac281" />
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="手"
        android:id="@+id/textView7"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:layout_alignBottom="@+id/horizontalScrollView2"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:textColor="#494848" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11111"
        android:id="@+id/textView6"
        android:textColor="#030014"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/netImgBtn"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#50e8e8e8" />


</RelativeLayout>
